# Hyperchain-Core

./: README.md  ReleaseNotes.md
HyperchainCore/: AppPlugins.cpp  AppPlugins.h  CMakeLists.txt  HyperChainCPack.cmake  LICENSE  Log.cpp  Log.h  NodeInfo.cpp  NodeInfo.h  README.md  Types.h  VERSION.cmake  config.h.in  consolecommandhandler.cpp  consolecommandhandler.h  installscript-gui.qs  installscript.qs  logo.rc.in  main.cpp  newLog.cpp  newLog.h  targetselectwidget.ui
HyperchainCore/HttpUnit/: HttpUnit.cpp  HttpUnit.h  convert.cpp  convert.h  md5.cpp  md5.h  mutex.h  sock.cpp  sock.h  switchsock.cpp  switchsock.h
HyperchainCore/HyperChain/: ApplicationChainTask.hpp  CMakeLists.txt  HyperChainSpace.cpp  HyperChainSpace.h  HyperData.cpp  HyperData.h  PullChainSpaceTask.hpp  PullHyperDataTask.hpp  blockheaderTask.hpp  headerhashTask.hpp  hyperblockTask.hpp
HyperchainCore/cmake/modules/: FindBerkeleyDB.cmake  Findbreakpad.cmake  unofficial-breakpad-config.cmake
HyperchainCore/conf/: hyperchain
HyperchainCore/consensus/: buddyinfo.cpp  buddyinfo.h  consensus_engine.cpp  consensus_engine.h  globalbuddytask.cpp  globalbuddytask.h  hyperblockTask.hpp  onchainconfirmtask.hpp  onchaintask.hpp  p2pprotocol.cpp  p2pprotocol.h
HyperchainCore/crypto/: SHA2.cpp  crc32.cpp  crc32.h  sha2.h
HyperchainCore/data/: block.cpp  commonstruct.cpp  inter_public.cpp  merkle.cpp
HyperchainCore/db/: HyperchainDB.cpp  HyperchainDB.h  RestApi.cpp  RestApi.h  dbmgr.cpp  dbmgr.h
HyperchainCore/headers/: UUFile.h  commonstruct.cpp  commonstruct.h  convert.h  convert2.h  gen_int.h  includeComm.h  inter_public.h  lambda.h  merkle.h  platform.h  shastruct.h
HyperchainCore/interface/: QtInterface.cpp  QtInterface.h  QtNotify.cpp  QtNotify.h  QtNotifyConsole.cpp  QtNotifyConsole.h
HyperchainCore/node/: Any.hpp  CNode.cpp  CNode.h  HCMQBroker.cpp  HCMQBroker.h  HCMQClient.cpp  HCMQClient.h  HCMQWrk.cpp  HCMQWrk.h  HCNode.cpp  HCNode.h  IAccessPoint.h  IDGenerator.cpp  IDGenerator.h  ITask.hpp  KBuckets.cpp  KBuckets.h  MsgDispatcher.cpp  MsgDispatcher.h  MsgHandler.cpp  MsgHandler.h  NodeManager.cpp  NodeManager.h  NodeUpkeepThreadPool.cpp  NodeUpkeepThreadPool.h  NonCopyable.hpp  ObjectFactory.hpp  PingPongTask.cpp  PingPongTask.h  ProtocolVer.cpp  ProtocolVer.h  SearchNeighbourTask.cpp  SearchNeighbourTask.h  SearchNeighbourTask.hpp  SearchTask.hpp  Singleton.h  SyncQueue.h  TaskThreadPool.cpp  TaskThreadPool.h  TcpAccessPoint.hpp  (+17 more)
HyperchainCore/plugins/: CMakeLists.txt  PluginContext.h  export.lds
HyperchainCore/plugins/common/: bloomfilter.cpp  bloomfilter.h
HyperchainCore/plugins/ledger/: CMakeLists.txt  bignum.h  callback.cpp  crypter.cpp  cryptotoken.cpp  cryptotoken.h  db.cpp  db.h  hcserialize.h  headers.h  init.cpp  init.h  irc.cpp  key.h  keystore.cpp  ledger_rpc.cpp  ledger_rpc.h  ledgermain.cpp  ledgermain.h  ledgertask.cpp  ledgertask.h  net.cpp  net.h  noui.h  protocol.cpp  protocol.h  script.cpp  script.h  uint256.h  util.cpp  util.h  wallet.cpp  wallet.h
HyperchainCore/plugins/ledger/cryptopp/: cpu.cpp  sha.cpp  sha.h
HyperchainCore/plugins/paracoin/: CMakeLists.txt  base58.h  bitcoin-config.h  block.cpp  block.h  callback.cpp  compat.h  crypter.cpp  cryptocurrency.cpp  cryptocurrency.h  db.cpp  db.h  dllmain.cpp  dllmain.h  hcserialize.h  headers.h  init.cpp  init.h  irc.cpp  irc.h  key.h  keystore.cpp  keystore.h  ledgertask.cpp  ledgertask.h  net.cpp  net.h  para_rpc.cpp  para_rpc.h  paratask.cpp  paratask.h  protocol.h  random.cpp  random.h  script.cpp  script.h  serialize.h  uint256.h  util.cpp  util.h  (+3 more)
HyperchainCore/plugins/paracoin/chfast-ethash/: CMakeLists.txt
HyperchainCore/plugins/paracoin/chfast-ethash/include/ethash/: ethash.hpp  progpow.hpp
HyperchainCore/plugins/paracoin/chfast-ethash/lib/ethash/: CMakeLists.txt  ethash-internal.hpp  ethash.cpp  progpow.cpp
HyperchainCore/plugins/paracoin/compat/: byteswap.h  endian.h  strnlen.cpp
HyperchainCore/plugins/paracoin/crypto/: aes.cpp  common.h  equihash.cpp  equihash.h
HyperchainCore/plugins/paracoin/crypto/progpow/: ethash-internal.hpp  ethash.cpp
HyperchainCore/plugins/paracoin/cryptopp/: config.h
HyperchainCore/plugins/paracoin/tools/: CMakeLists.txt  stat.cpp
HyperchainCore/spdlog/: logger.h
HyperchainCore/spdlog/details/: logger_impl.h
HyperchainCore/udt/: core.cpp  md5.cpp
HyperchainCore/util/: commonutil.cpp  commonutil.h  cppsqlite3.cpp  cppsqlite3.h  md5.cpp
HyperchainCore/utility/: CallbackFuncObj.cpp  CallbackFuncObj.h  ElapsedTime.cpp  ElapsedTime.h  MutexObj.cpp  MutexObj.h  OSFunctions.cpp  OSFunctions.h  ThreadObj.cpp  ThreadObj.h  convert2.cpp  netutil.cpp  netutil.h
HyperchainCore/wnd/: common.cpp  common.h
